--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "getconfig": "^4.5.0",
     "hapi-pino": "^6.3.0",
     "html-webpack-plugin": "^3.2.0",
+    "lodash": "^4.17.15",
     "no-kafka": "^3.4.3",
+    "pngjs": "^3.4.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "sharp": "^0.23.1",
     "style-loader": "^1.0.0",
+    "svgson": "^4.0.0",
     "url-loader": "^2.2.0",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
