--- a/package.json
+++ b/package.json
@@ -2,41 +2,41 @@
   "name": "pure-heroku-demo",
   "version": "1.0.0",
   "dependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
     "@hapi/hapi": "^18.4.0",
     "@hapi/inert": "^5.1.2",
-    "babel-loader": "^8.0.6",
-    "css-loader": "^3.2.0",
     "dotenv": "^8.1.0",
-    "file-loader": "^4.2.0",
     "getconfig": "^4.5.0",
     "hapi-pino": "^6.3.0",
-    "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.15",
     "no-kafka": "^3.4.3",
     "pngjs": "^3.4.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-router-dom": "^5.1.2",
     "sharp": "^0.23.1",
-    "style-loader": "^1.0.0",
     "svgson": "^4.0.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
     "ws": "^7.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
-    "prettier": "^1.18.2"
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.18.2",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "engines": {
     "node": "10.15.3",
@@ -82,6 +82,7 @@
     "build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development node server.js",
     "eslint": "eslint --fix .",
+    "heroku-postbuild": "if [ -d \"dist\" ]; then echo 'dist exists, skipping build'; else npm run build; fi",
     "lint": "npm run eslint && npm run prettier:list",
     "nodemon": "nodemon --exec 'npm run dev' -e 'js json' --ignore app",
     "prettier": "prettier --write '**/*.{js,md,css,json,scss}'",
