--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@hapi/hapi": "^18.4.0",
     "@hapi/inert": "^5.1.2",
+    "aws-sdk": "^2.556.0",
     "dotenv": "^8.1.0",
     "getconfig": "^4.5.0",
     "hapi-pino": "^6.3.0",
@@ -12,7 +13,7 @@
     "pngjs": "^3.4.0",
     "sharp": "^0.23.1",
     "svgson": "^4.0.0",
-    "ws": "^7.1.2"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
@@ -28,6 +29,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.18.2",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
