--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^1.18.2",
+    "qrcode.react": "^0.9.3",
     "query-string": "^6.8.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
