--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     },
     "SERVER_APP_NAME": {
       "description": "The name of the server app to connect to",
-      "value": "pure-heroku-demo",
+      "value": "friends-from-the-trail",
       "required": true
     },
     "HEROKU_TOKEN": {
