Update app name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "Pure Heroku Demo Attendee",
+  "name": "Selfies from the Trail",
   "description": "",
-  "repository": "https://github.com/andyet/pure-heroku-demo-attendee",
+  "repository": "https://github.com/heroku-examples/selfies-from-the-trail-demo",
   "success_url": "/qr",
   "buildpacks": [
     {
