change messaging for TrailheaDX

--- a/app.json
+++ b/app.json
@@ -25,6 +25,7 @@
     },
     "SHARE_DOMAIN": {
       "description": "The domain to share images on. Should start with http(s)://",
+      "value": "https://selfie.camp",
       "required": false
     }
   }
